# cosmic-renwable

./: .gitignore  README.md  cosmic-renewable.code-workspace  deploy.sh  ecosystem.config.js  package.json  run_all.sh  run_local.sh  start-dev.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
4d/692a9f96af/: metadata.json
4d/692a9f96af/0/: content_hash.txt  full.jsonl  metadata.json
55/325eb14a9a/: metadata.json
55/325eb14a9a/0/: content_hash.txt  metadata.json  prompt.txt
58/bff1b82b24/: metadata.json
58/bff1b82b24/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
87/46322e5aed/: metadata.json
87/46322e5aed/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
90/19c2e62fac/: metadata.json
90/19c2e62fac/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a4/2ac3d41b45/: metadata.json
a4/2ac3d41b45/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
b8/c1c30d5dbb/: metadata.json
b8/c1c30d5dbb/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
backend/: README.md  main.py  pyproject.toml
cc/b58a9542aa/: metadata.json
cc/b58a9542aa/0/: content_hash.txt  metadata.json  prompt.txt
cdk/: package.json
cdk/lib/: cosmicweb-stack.d.ts  cosmicweb-stack.js  cosmicweb-stack.ts
frontend/: package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/src/components/: CountdownBanner.tsx  CustomerReviews.tsx  Footer.tsx  (+5 more)
lambda/contact/: index.js
lambda/google-reviews/: index.js
lambda/quote/: index.js
(+39 files in other folders)
