[project]
name = "cosmic-renewable-energy-backend"
version = "1.0.0"
description = "FastAPI backend for Cosmic Renewable Energy website"
authors = [
    {name = "Cosmic Renewable Energy", email = "info@cosmicrenewable.com.au"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "email-validator>=2.2.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
dev = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload --log-level debug"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "W191", "W503"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
